[gd_scene load_steps=13 format=2]

[ext_resource path="res://meshlib.tres" type="MeshLibrary" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://Units/PigeonUnit.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/LevelUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Level.gd" type="Script" id=5]
[ext_resource path="res://Units/Human1Unit.tscn" type="PackedScene" id=6]
[ext_resource path="res://PlayerController.gd" type="Script" id=7]
[ext_resource path="res://EnemyController.gd" type="Script" id=8]
[ext_resource path="res://Units/CowUnit.tscn" type="PackedScene" id=9]
[ext_resource path="res://Units/Human3Unit.tscn" type="PackedScene" id=10]
[ext_resource path="res://Level4.tscn" type="PackedScene" id=12]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.14902, 0.137255, 0.180392, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )

[node name="Level2" type="Node"]
script = ExtResource( 5 )
next_scene = ExtResource( 12 )

[node name="LevelUI" parent="." instance=ExtResource( 4 )]

[node name="World" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="EnemyController" type="Node" parent="World"]
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="World/EnemyController"]
one_shot = true

[node name="PlayerController" type="Spatial" parent="World"]
script = ExtResource( 7 )

[node name="MoveMarkers" type="Spatial" parent="World/PlayerController"]

[node name="Camera" type="Camera" parent="World"]
transform = Transform( 0.707107, 0.353553, -0.612373, 0, 0.866026, 0.499999, 0.707107, -0.353553, 0.612373, -5.985, 5.365, 3 )
environment = SubResource( 1 )
projection = 1
fov = 80.4707
size = 10.0158

[node name="GridMap" type="GridMap" parent="World"]
mesh_library = ExtResource( 1 )
cell_size = Vector3( 1, 1, 1 )
data = {
"cells": PoolIntArray( 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 65535, 0, 1, 65538, 0, 4, -65531, 0, 5, -1, 0, 5, 0, 1, 1, 1, 1, 1, 2, 1, 1, 3, 1, 1, 4, 1, 1, -65536, 1, 5, -65535, 1, 5, -65534, 1, 5, -65533, 1, 5, -65532, 1, 5, 65859, 65352, 3, 65716, 65433, 3, 65660, 65465, 3, 0, 65527, 1, 65532, 65527, 1, 65533, 65527, 1, 65534, 65527, 1, 65535, 65527, 1, -65536, 65527, 5, -4, 65527, 5, -3, 65527, 5, -2, 65527, 5, -1, 65527, 5, 0, 65528, 1, 1, 65528, 1, 65531, 65528, 1, 65532, 65528, 1, 65533, 65528, 1, 65534, 65528, 1, 65535, 65528, 1, 131070, 65528, 4, -65535, 65528, 5, -5, 65528, 5, -4, 65528, 5, 0, 65529, 1, 1, 65529, 1, 2, 65529, 1, 65531, 65529, 1, 65532, 65529, 1, 65533, 65529, 1, 65534, 65529, 1, 65535, 65529, 1, 131069, 65529, 4, 131070, 65529, 4, -65536, 65529, 5, -65534, 65529, 5, -5, 65529, 5, -2, 65529, 5, -1, 65529, 5, 0, 65530, 1, 1, 65530, 1, 2, 65530, 1, 3, 65530, 1, 65531, 65530, 1, 65532, 65530, 1, 65533, 65530, 1, 65536, 65530, 4, 131068, 65530, 4, 131069, 65530, 4, -65536, 65530, 5, -65535, 65530, 5, -65533, 65530, 5, -5, 65530, 5, -3, 65530, 5, 0, 65531, 1, 1, 65531, 1, 2, 65531, 1, 3, 65531, 1, 4, 65531, 1, 65531, 65531, 1, 65532, 65531, 1, 65533, 65531, 1, 65535, 65531, 1, 65536, 65531, 4, 65537, 65531, 4, 131069, 65531, 4, 131071, 65531, 4, -65535, 65531, 5, -65534, 65531, 5, -65532, 65531, 5, -5, 65531, 5, -3, 65531, 5, -1, 65531, 5, 0, 65532, 1, 1, 65532, 1, 2, 65532, 1, 3, 65532, 1, 4, 65532, 1, 5, 65532, 1, 65531, 65532, 1, 65532, 65532, 1, 65533, 65532, 1, 65534, 65532, 1, 65535, 65532, 1, 65536, 65532, 4, 65537, 65532, 4, 65538, 65532, 4, 131070, 65532, 4, 131071, 65532, 4, -65534, 65532, 5, -65531, 65532, 5, -5, 65532, 5, -3, 65532, 5, -2, 65532, 5, -1, 65532, 5, 0, 65533, 1, 1, 65533, 1, 3, 65533, 1, 4, 65533, 1, 5, 65533, 1, 65532, 65533, 1, 65533, 65533, 1, 65534, 65533, 1, 65535, 65533, 1, 65536, 65533, 4, 65537, 65533, 4, 131070, 65533, 4, 131071, 65533, 4, -65535, 65533, 5, -65533, 65533, 5, -65531, 65533, 5, -4, 65533, 5, -3, 65533, 5, 0, 65534, 1, 3, 65534, 1, 4, 65534, 1, 5, 65534, 1, 65533, 65534, 1, 65534, 65534, 1, 65535, 65534, 1, 65536, 65534, 4, 65539, 65534, 4, 65540, 65534, 4, 131071, 65534, 4, -65536, 65534, 5, -65533, 65534, 5, -65531, 65534, 5, -3, 65534, 5, -2, 65534, 5, 0, 65535, 1, 1, 65535, 1, 2, 65535, 1, 3, 65535, 1, 4, 65535, 1, 5, 65535, 1, 65534, 65535, 1, 65535, 65535, 1, 65538, 65535, 4, 65539, 65535, 4, -65535, 65535, 5, -65534, 65535, 5, -65531, 65535, 5, -2, 65535, 5 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="PlayerUnits" type="Node" parent="World"]

[node name="BaseUnit" parent="World/PlayerUnits" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 1, -2.5 )

[node name="PigeonUnit" parent="World/PlayerUnits" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.5, -6.5 )

[node name="EnemyUnits" type="Node" parent="World"]

[node name="BaseUnit2" parent="World/EnemyUnits" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 0.5, -2.5 )

[node name="BaseUnit" parent="World/EnemyUnits" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0.5, 0.5 )

[connection signal="pressed" from="LevelUI/EndTurnButton" to="World" method="_on_EndTurnButton_pressed"]
[connection signal="phase_changed" from="World" to="." method="_on_World_phase_changed"]
[connection signal="end_turn" from="World/EnemyController" to="World" method="_on_EnemyController_end_turn"]
[connection signal="end_turn" from="World/PlayerController" to="World" method="_on_PlayerController_end_turn"]

[editable path="LevelUI"]
